--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-code-blocks": "^0.1.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "tw-elements": "^1.0.0-beta3",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "set PORT=3007 && react-scripts start",
